# bracket-learn

./: .gitignore  .readthedocs.yaml  AUDIT.md  CHANGELOG.md  DECISION.md  README.draft.md  README.md  __init__.py  adapters.py  base.py  baselines.py  compose.py  composite.py  forecast.py  lift.py  multitarget.py  persistence.py  pipeline.py  protocols.py  pyproject.toml  restrict.py  score.py  search.py  tail.py  trainers.py  transform.py  transformers.py
.github/workflows/: ci.yml
bracketlearn/: base.py  multitarget.py
bracketlearn/examples/: bike_sharing_timeseries.py  grid_search_demo.py  value_trainers_demo.py  weather_e2e.py  weather_rnn_e2e.py
bracketlearn/forecast/: __init__.py
bracketlearn/trainers/: bracket.py  combiners.py  parametric.py  quantile.py
docs/: Makefile  conf.py  index.md
docs/_static/: .gitkeep
docs/api/: adapters.rst  base.rst  baselines.rst  composite.rst  forecast.rst  lift.rst  multitarget.rst  persistence.rst  pipeline.rst  score.rst  search.rst  trainers.rst  transformers.rst  value.rst
docs/guides/: adapters.md  baselines.md  bracket_expander.md  catalog.md  concepts.md  cv.md  examples.md  multitarget.md  package_map.md  persistence.md  quickstart.md  scoring.md  search.md  tail_policies.md  value_trainers.md  value_vs_accuracy.md  value_with_fees.md  weights.md
examples/: bike_sharing_timeseries.py  grid_search_demo.py  housing_brackets.py  value_vs_accuracy_weather.py  weather_e2e.py  weather_rnn_e2e.py
examples/data/: weather_value_sample.parquet
forecast/: __init__.py  _helpers.py  _meta.py  base.py  bracket.py  contract.py  parametric.py  quantile.py
notebooks/: README.md  bike_sharing_timeseries.ipynb  grid_search_demo.ipynb  housing_brackets.ipynb  leaderboard_zoo.ipynb
notebooks/_src/: _style.py  bike_sharing_timeseries.py  grid_search_demo.py  housing_brackets.py  leaderboard_zoo.py
tests/: conftest.py  test_affine.py  test_backings.py  test_baselines.py  test_binary_threshold_twin.py  test_compose.py  test_cv_weights_multitarget.py  test_dist_combiners.py  test_emos_crps_nelder_mead.py  test_invariants.py  test_ladder_sum.py  test_lift.py  test_ngboost_seeded_base.py  test_no_silent_fallbacks.py  test_normalize_bracket_probs.py  test_per_row_bracket_ladder.py  test_per_row_bracket_storage.py  test_persistence.py  test_phase_c.py  test_pipeline.py  test_pipeline_chain.py  test_quantile_isotonic_method.py  test_restrict.py  test_scores.py  test_scores_extra.py  test_sklearn_compat_v2.py  test_sklearn_contract.py  test_trainers.py  test_transform.py  test_value_metrics.py  test_value_trainers.py
trainers/: __init__.py  _common.py  _compose_util.py  _factories.py  bracket.py  combiners.py  meta.py  parametric.py  point.py  quantile.py
value/: __init__.py  objective.py  trainers.py
