[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bracketlearn"
version = "0.2.0"
description = "Forecasting + bracket-contract pricing framework, sklearn-style."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Frederik Benirschke" },
]
keywords = [
    "forecasting",
    "probabilistic-forecasting",
    "prediction-markets",
    "calibration",
    "conformal-prediction",
    "quantile-regression",
    "ensemble",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Trainers that need extra ML libs.
boosting = ["lightgbm>=4.0", "ngboost>=0.5"]
quantile-forest = ["quantile-forest>=1.3"]
rnn = ["torch>=2.0"]
# Everything for the full e2e demo. Inlined (rather than referencing the
# other extras) so older pip / poetry / pdm resolvers don't choke on
# self-referencing extras. Keep in sync with [boosting], [quantile-forest],
# [rnn] above.
demo = [
    "lightgbm>=4.0",
    "ngboost>=0.5",
    "quantile-forest>=1.3",
    "torch>=2.0",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.8",
]
docs = [
    "sphinx>=7",
    "furo>=2024",
    "myst-parser>=2",
]

[project.urls]
Homepage = "https://github.com/FrederikBenirschke/bracketlearn"
Issues = "https://github.com/FrederikBenirschke/bracketlearn/issues"

# The bracketlearn source files live alongside this pyproject.toml (flat
# layout where the project dir *is* the package dir). Map the package name
# explicitly to "." so setuptools picks up adapters.py / forecast.py / ...
# as bracketlearn.adapters / bracketlearn.forecast / ... .
[tool.setuptools]
packages = ["bracketlearn", "bracketlearn.trainers"]
license-files = ["LICENSE"]

[tool.setuptools.package-dir]
bracketlearn = "."

[tool.setuptools.package-data]
bracketlearn = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    # lightgbm's "[LightGBM] [Warning] No further splits with positive gain"
    # is a per-fit message we can't suppress at the call site.
    "ignore::UserWarning:lightgbm",
    # Surface all DeprecationWarnings by default so CI catches upstream
    # (numpy / scikit-learn / scipy) deprecations the day they appear.
    "default::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "notebooks/*.ipynb",       # jupyter notebooks are not linted as .py
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # handled by formatter
    "B008",   # function calls in defaults (we use dataclass field(default_factory=...))
    "SIM108", # ternary not always more readable than if/else
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]              # sys.path tweak before imports is intentional
"notebooks/_src/*" = ["E402", "E702"]  # jupytext cells: imports anywhere, plt.show() chains

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
