[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bracket-learn"
dynamic = ["version"]
description = "Forecasting + bracket-contract pricing framework, sklearn-style."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Frederik Benirschke" },
]
keywords = [
    "forecasting",
    "probabilistic-forecasting",
    "prediction-markets",
    "calibration",
    "conformal-prediction",
    "quantile-regression",
    "ensemble",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Trainers that need extra ML libs.
boosting = ["lightgbm>=4.0", "ngboost>=0.5"]
quantile-forest = ["quantile-forest>=1.3"]
rnn = ["torch>=2.0"]
# Everything for the full e2e demo. Inlined (rather than referencing the
# other extras) so older pip / poetry / pdm resolvers don't choke on
# self-referencing extras. Keep in sync with [boosting], [quantile-forest],
# [rnn] above.
demo = [
    "lightgbm>=4.0",
    "ngboost>=0.5",
    "quantile-forest>=1.3",
    "torch>=2.0",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5",
]
docs = [
    "sphinx>=7",
    "furo>=2024",
    "myst-parser>=2",
]

[project.urls]
Homepage = "https://github.com/FrederikBenirschke/bracket-learn"
Issues = "https://github.com/FrederikBenirschke/bracket-learn/issues"

# The bracketlearn source files live alongside this pyproject.toml (flat
# layout where the project dir *is* the package dir). Map the package name
# explicitly to "." so setuptools picks up adapters.py / forecast.py / ...
# as bracketlearn.adapters / bracketlearn.forecast / ... .
[tool.setuptools]
packages = [
    "bracketlearn",
    "bracketlearn.forecast",
    "bracketlearn.trainers",
    "bracketlearn.value",
    "bracketlearn.examples",
]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
bracketlearn = ["py.typed"]
# Ship the bundled anonymized sample so the value example runs from a wheel
# (value_trainers_demo / value_vs_accuracy_weather load it via __file__).
"bracketlearn.examples" = ["data/*.parquet"]

# Single-source the version from bracketlearn/__init__.py::__version__ so the
# wheel can never disagree with the runtime value (the 0.5.0/0.6.0 drift bug).
[tool.setuptools.dynamic]
version = { attr = "bracketlearn.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    # lightgbm's "[LightGBM] [Warning] No further splits with positive gain"
    # is a per-fit message we can't suppress at the call site.
    "ignore::UserWarning:lightgbm",
    # Surface all DeprecationWarnings by default so CI catches upstream
    # (numpy / scikit-learn / scipy) deprecations the day they appear.
    "default::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "notebooks/*.ipynb",       # jupyter notebooks are not linted as .py
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # handled by formatter
    "B008",   # function calls in defaults (we use dataclass field(default_factory=...))
    "SIM105", # try/except/pass is more explicit than contextlib.suppress for narrow guards
    "SIM108", # ternary not always more readable than if/else
    "SIM300", # Yoda conditions are clearer for size/shape checks (N <= k)
]

[tool.ruff.lint.per-file-ignores]
"bracketlearn/examples/*" = ["E402"]   # sys.path tweak before imports is intentional
"notebooks/_src/*" = ["E402", "E702"]  # jupytext cells: imports anywhere, plt.show() chains
"tests/*" = ["E702"]                   # compact one-liners in tests are intentional

[tool.ruff.lint.isort]
# The import package is `bracketlearn` even though the distribution is
# `bracket-learn`, so ruff cannot auto-detect it as first-party. Declare it
# explicitly to keep first-party imports in their own group.
known-first-party = ["bracketlearn"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# The type gate covers the library only. Examples / notebooks / tests carry
# intentional type games (sklearn datasets, pandas, jupytext cells) that are
# not part of the published, typed surface, so the package is enumerated by
# module instead of `files = ["bracketlearn"]` to keep `bracketlearn.examples`
# out of the gate.
modules = [
    "bracketlearn.adapters", "bracketlearn.base", "bracketlearn.baselines",
    "bracketlearn.compose", "bracketlearn.lift", "bracketlearn.multitarget",
    "bracketlearn.persistence", "bracketlearn.pipeline", "bracketlearn.protocols",
    "bracketlearn.restrict", "bracketlearn.score", "bracketlearn.search",
    "bracketlearn.transform", "bracketlearn.transformers",
]
packages = ["bracketlearn.forecast", "bracketlearn.trainers", "bracketlearn.value"]

# Third-party packages that ship no type stubs / py.typed marker. Without this
# every `import sklearn` etc. is an `import-untyped` error unrelated to our code.
[[tool.mypy.overrides]]
module = [
    "sklearn.*", "scipy.*", "lightgbm.*", "ngboost.*", "quantile_forest.*",
    "torch.*", "pandas.*", "polars.*", "matplotlib.*", "openml.*",
]
ignore_missing_imports = true
